--- a/typescript/packages/math/package.json
+++ b/typescript/packages/math/package.json
@@ -1,9 +1,11 @@
 {
   "name": "@repo/math",
-  "type": "module",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
   "scripts": {
-    "dev": "tsc --watch",
-    "build": "tsc"
+    "dev": "tsup src/*.ts --format cjs,esm --dts --watch",
+    "build": "tsup src/*.ts --format cjs,esm --dts"
   },
   "exports": {
     "./add": {
@@ -17,6 +19,7 @@
   },
   "devDependencies": {
     "@repo/typescript-config": "*",
-    "typescript": "latest"
+    "typescript": "latest",
+    "tsup": "latest"
   }
 }
