--- a/typescript/apps/web/package.json
+++ b/typescript/apps/web/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@repo/ui": "*",
-    "@repo/math": "*",
+    "@repo/math": "^0.0.1",
     "next": "^15.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
@@ -24,6 +24,6 @@
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.1",
     "eslint": "^9.28.0",
-    "typescript": "5.8.2"
+    "typescript": "undefined"
   }
 }
