--- a/typescript/packages/math/package.json
+++ b/typescript/packages/math/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@repo/math",
+  "version": "0.0.1",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
@@ -19,7 +20,7 @@
   },
   "devDependencies": {
     "@repo/typescript-config": "*",
-    "typescript": "latest",
-    "tsup": "latest"
+    "typescript": "undefined",
+    "tsup": "^8.5.0"
   }
 }
