--- a/typescript/package.json
+++ b/typescript/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "typescript",
+  "name": "dkg-monorepo",
   "private": true,
   "scripts": {
     "build": "turbo run build",
@@ -12,7 +12,7 @@
   "devDependencies": {
     "prettier": "^3.5.3",
     "turbo": "^2.5.4",
-    "typescript": "5.8.2"
+    "typescript": "undefined"
   },
   "engines": {
     "node": ">=18"
