--- a/typescript/packages/eslint-config/package.json
+++ b/typescript/packages/eslint-config/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "exports": {
     "./base": "./base.js",
+    "./expo": "./expo.js",
     "./next-js": "./next.js",
     "./react-internal": "./react-internal.js"
   },
@@ -13,6 +14,7 @@
     "@next/eslint-plugin-next": "^15.3.0",
     "eslint": "^9.29.0",
     "eslint-config-prettier": "^10.1.1",
+    "eslint-config-expo": "~9.2.0",
     "eslint-plugin-only-warn": "^1.1.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
