--- a/typescript/apps/example-edge-node/tsconfig.json
+++ b/typescript/apps/example-edge-node/tsconfig.json
@@ -1,17 +1,10 @@
 {
-  "extends": "expo/tsconfig.base",
+  "extends": ["@dkg/typescript-config/expo", "expo/tsconfig.base"],
   "compilerOptions": {
     "strict": true,
     "paths": {
-      "@/*": [
-        "./*"
-      ]
+      "@/*": ["./*"]
     }
   },
-  "include": [
-    "**/*.ts",
-    "**/*.tsx",
-    ".expo/types/**/*.ts",
-    "expo-env.d.ts"
-  ]
+  "include": ["**/*.ts", "**/*.tsx", ".expo/types/**/*.ts", "expo-env.d.ts"]
 }
