--- a/typescript/packages/plugins/package.json
+++ b/typescript/packages/plugins/package.json
@@ -10,6 +10,11 @@
     "build": "tsup src/*.ts --format cjs,esm --dts",
     "check-types": "tsc --noEmit"
   },
+  "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.13.0",
+    "fetch-to-node": "^2.1.0",
+    "hono": "^4.8.1"
+  },
   "devDependencies": {
     "@modelcontextprotocol/sdk": "^1.13.0",
     "@dkg/typescript-config": "*",
