--- a/typescript/packages/plugin-example/package.json
+++ b/typescript/packages/plugin-example/package.json
@@ -13,15 +13,12 @@
   },
   "devDependencies": {
     "@dkg/eslint-config": "*",
-    "@dkg/plugins": "0.0.1",
     "@dkg/typescript-config": "*",
     "eslint": "^9.29.0",
     "tsup": "^8.5.0",
     "typescript": "undefined"
   },
   "dependencies": {
-    "hono-openapi": "^0.4.8",
-    "zod": "^3.25.67",
-    "zod-openapi": "^4.2.4"
+    "@dkg/plugins": "^0.0.1"
   }
 }
