--- a/typescript/packages/plugins/package.json
+++ b/typescript/packages/plugins/package.json
@@ -5,16 +5,37 @@
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    },
+    "./hono": {
+      "import": "./dist/hono.mjs",
+      "require": "./dist/hono.js",
+      "types": "./dist/hono.d.ts"
+    },
+    "./types": {
+      "import": "./dist/types.mjs",
+      "require": "./dist/types.js",
+      "types": "./dist/types.d.ts"
+    }
+  },
   "scripts": {
     "dev": "tsup src/*.ts --format cjs,esm --dts --watch",
     "build": "tsup src/*.ts --format cjs,esm --dts",
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
+    "@hono/zod-validator": "^0.4.3",
     "@modelcontextprotocol/sdk": "^1.13.0",
     "dkg.js": "^8.0.14",
     "fetch-to-node": "^2.1.0",
-    "hono": "^4.8.1"
+    "hono": "^4.8.1",
+    "hono-openapi": "^0.4.8",
+    "zod": "^3.25.67",
+    "zod-openapi": "^4.2.4"
   },
   "devDependencies": {
     "@dkg/typescript-config": "*",
