Add auth plugin

--- a/typescript/packages/plugin-auth/package.json
+++ b/typescript/packages/plugin-auth/package.json
@@ -1,29 +1,24 @@
 {
-  "name": "@dkg/mcp-server",
+  "name": "@dkg/plugin-auth",
   "version": "0.0.1",
   "description": "",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "dev": "tsup src/*.ts --format cjs,esm --dts --watch --onSuccess 'node dist/index.js'",
+    "dev": "tsup src/*.ts --format cjs,esm --dts --watch",
     "build": "tsup src/*.ts --format cjs,esm --dts",
     "check-types": "tsc --noEmit",
     "lint": "eslint . --max-warnings 0"
   },
   "dependencies": {
-    "@dkg/plugin-auth": "^0.0.1",
-    "@dkg/plugin-example": "^0.0.1",
-    "@dkg/plugin-swagger": "^0.0.1",
-    "@dkg/plugins": "^0.0.1",
-    "@hono/node-server": "^1.14.4",
-    "dkg.js": "^8.0.14"
+    "@dkg/plugins": "^0.0.1"
   },
   "devDependencies": {
     "@dkg/eslint-config": "*",
     "@dkg/typescript-config": "*",
     "eslint": "^9.29.0",
-    "tsup": "^8.5.0",
-    "typescript": "undefined"
+    "typescript": "undefined",
+    "tsup": "^8.5.0"
   }
 }
