--- a/typescript/packages/plugins/package.json
+++ b/typescript/packages/plugins/package.json
@@ -11,10 +11,10 @@
       "require": "./dist/index.js",
       "types": "./dist/index.d.ts"
     },
-    "./hono": {
-      "import": "./dist/hono.mjs",
-      "require": "./dist/hono.js",
-      "types": "./dist/hono.d.ts"
+    "./helpers": {
+      "import": "./dist/helpers.mjs",
+      "require": "./dist/helpers.js",
+      "types": "./dist/helpers.d.ts"
     },
     "./types": {
       "import": "./dist/types.mjs",
@@ -28,12 +28,9 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
-    "@hono/zod-validator": "^0.4.3",
     "@modelcontextprotocol/sdk": "^1.13.0",
     "dkg.js": "^8.0.14",
-    "fetch-to-node": "^2.1.0",
-    "hono": "^4.8.1",
-    "hono-openapi": "^0.4.8",
+    "express": "^5.1.0",
     "zod": "^3.25.67",
     "zod-openapi": "^4.2.4"
   },
