--- a/typescript/packages/plugins/package.json
+++ b/typescript/packages/plugins/package.json
@@ -37,6 +37,7 @@
   "devDependencies": {
     "@dkg/typescript-config": "*",
     "@modelcontextprotocol/sdk": "^1.13.0",
+    "@types/express": "^5.0.3",
     "eslint": "^9.29.0",
     "tsup": "^8.5.0",
     "typescript": "undefined"
