--- a/typescript/packages/plugin-swagger/package.json
+++ b/typescript/packages/plugin-swagger/package.json
@@ -14,12 +14,14 @@
   "devDependencies": {
     "@dkg/eslint-config": "*",
     "@dkg/typescript-config": "*",
+    "@types/swagger-ui-express": "^4.1.8",
     "eslint": "^9.29.0",
+    "openapi-types": "^12.1.3",
     "tsup": "^8.5.0",
     "typescript": "undefined"
   },
   "dependencies": {
     "@dkg/plugins": "^0.0.1",
-    "@hono/swagger-ui": "^0.5.2"
+    "swagger-ui-express": "^5.0.1"
   }
 }
