--- a/typescript/packages/plugins/package.json
+++ b/typescript/packages/plugins/package.json
@@ -29,15 +29,19 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.13.0",
+    "cors": "^2.8.5",
     "dkg.js": "^8.0.14",
     "express": "^5.1.0",
+    "morgan": "^1.10.0",
     "zod": "^3.25.67",
     "zod-openapi": "^4.2.4"
   },
   "devDependencies": {
     "@dkg/typescript-config": "*",
     "@modelcontextprotocol/sdk": "^1.13.0",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/morgan": "^1.9.10",
     "eslint": "^9.29.0",
     "tsup": "^8.5.0",
     "typescript": "undefined"
