--- a/typescript/packages/plugins/package.json
+++ b/typescript/packages/plugins/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.13.0",
+    "compression": "^1.8.0",
     "cors": "^2.8.5",
     "dkg.js": "^8.0.14",
     "express": "^5.1.0",
@@ -39,6 +40,7 @@
   "devDependencies": {
     "@dkg/typescript-config": "*",
     "@modelcontextprotocol/sdk": "^1.13.0",
+    "@types/compression": "^1.8.1",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/morgan": "^1.9.10",
