Global typescript version

--- a/typescript/packages/internal/package.json
+++ b/typescript/packages/internal/package.json
@@ -7,7 +7,6 @@
   },
   "devDependencies": {
     "@dkg/typescript-config": "*",
-    "@turbo/gen": "^2.5.0",
-    "typescript": "undefined"
+    "@turbo/gen": "^2.5.0"
   }
 }
