--- a/typescript/package.json
+++ b/typescript/package.json
@@ -12,7 +12,7 @@
   "devDependencies": {
     "prettier": "^3.5.3",
     "turbo": "^2.5.4",
-    "typescript": "undefined"
+    "typescript": "^5.8.3"
   },
   "engines": {
     "node": ">=18"
