--- a/typescript/packages/plugin-auth/package.json
+++ b/typescript/packages/plugin-auth/package.json
@@ -22,7 +22,6 @@
     "@types/passport": "^1.0.17",
     "@types/passport-jwt": "^4.0.1",
     "eslint": "^9.29.0",
-    "tsup": "^8.5.0",
-    "typescript": "undefined"
+    "tsup": "^8.5.0"
   }
 }
