--- a/typescript/packages/plugin-example/package.json
+++ b/typescript/packages/plugin-example/package.json
@@ -15,8 +15,7 @@
     "@dkg/eslint-config": "*",
     "@dkg/typescript-config": "*",
     "eslint": "^9.29.0",
-    "tsup": "^8.5.0",
-    "typescript": "undefined"
+    "tsup": "^8.5.0"
   },
   "dependencies": {
     "@dkg/plugins": "^0.0.1"
