--- a/typescript/packages/plugin-oauth/package.json
+++ b/typescript/packages/plugin-oauth/package.json
@@ -19,7 +19,6 @@
     "@dkg/eslint-config": "*",
     "@dkg/typescript-config": "*",
     "eslint": "^9.29.0",
-    "tsup": "^8.5.0",
-    "typescript": "undefined"
+    "tsup": "^8.5.0"
   }
 }
