--- a/typescript/packages/plugin-swagger/package.json
+++ b/typescript/packages/plugin-swagger/package.json
@@ -17,8 +17,7 @@
     "@types/swagger-ui-express": "^4.1.8",
     "eslint": "^9.29.0",
     "openapi-types": "^12.1.3",
-    "tsup": "^8.5.0",
-    "typescript": "undefined"
+    "tsup": "^8.5.0"
   },
   "dependencies": {
     "@dkg/plugins": "^0.0.1",
