--- a/typescript/packages/plugins/package.json
+++ b/typescript/packages/plugins/package.json
@@ -44,7 +44,6 @@
     "@types/express": "^5.0.3",
     "@types/morgan": "^1.9.10",
     "eslint": "^9.29.0",
-    "tsup": "^8.5.0",
-    "typescript": "undefined"
+    "tsup": "^8.5.0"
   }
 }
