--- a/typescript/packages/plugin-swagger/package.json
+++ b/typescript/packages/plugin-swagger/package.json
@@ -11,16 +11,16 @@
     "check-types": "tsc --noEmit",
     "lint": "eslint . --max-warnings 0"
   },
+  "dependencies": {
+    "@asteasolutions/zod-to-openapi": "^7.3.4",
+    "@dkg/plugins": "^0.0.1",
+    "swagger-ui-express": "^5.0.1"
+  },
   "devDependencies": {
     "@dkg/eslint-config": "*",
     "@dkg/typescript-config": "*",
     "@types/swagger-ui-express": "^4.1.8",
     "eslint": "^9.29.0",
-    "openapi-types": "^12.1.3",
     "tsup": "^8.5.0"
-  },
-  "dependencies": {
-    "@dkg/plugins": "^0.0.1",
-    "swagger-ui-express": "^5.0.1"
   }
 }
