--- a/typescript/packages/plugins/package.json
+++ b/typescript/packages/plugins/package.json
@@ -34,8 +34,7 @@
     "dkg.js": "^8.0.14",
     "express": "^5.1.0",
     "morgan": "^1.10.0",
-    "zod": "^3.25.67",
-    "zod-openapi": "^4.2.4"
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@dkg/typescript-config": "*",
