--- a/typescript/apps/example-edge-node/package.json
+++ b/typescript/apps/example-edge-node/package.json
@@ -21,6 +21,8 @@
     "@dkg/plugin-oauth": "^0.0.1",
     "@dkg/plugin-swagger": "^0.0.1",
     "@dkg/plugins": "^0.0.1",
+    "@expo-google-fonts/manrope": "^0.4.1",
+    "@expo-google-fonts/space-grotesk": "^0.4.0",
     "@expo/vector-icons": "^14.1.0",
     "@modelcontextprotocol/sdk": "^1.16.0",
     "@react-native-async-storage/async-storage": "2.1.2",
