--- a/typescript/apps/example-edge-node/package.json
+++ b/typescript/apps/example-edge-node/package.json
@@ -12,9 +12,11 @@
     "build:server": "tsup src/server/**/*.ts --format esm,cjs",
     "build:web": "expo export -p web --output-dir dist/app",
     "build:migrations": "drizzle-kit generate",
+    "build:scripts": "tsup src/scripts/**/*.ts --out-dir dist/scripts --format cjs",
     "dev:app": "expo start --web --port 8081",
     "dev:server": "tsup src/server/**/*.ts --format esm,cjs --watch --onSuccess='node dist/index.js --dev'",
-    "drizzle:studio": "drizzle-kit studio"
+    "drizzle:studio": "drizzle-kit studio",
+    "script:createUser": "node dist/scripts/createUser.js"
   },
   "dependencies": {
     "@dkg/plugin-example": "^0.0.1",
@@ -25,6 +27,7 @@
     "@expo-google-fonts/space-grotesk": "^0.4.0",
     "@expo/vector-icons": "^14.1.0",
     "@modelcontextprotocol/sdk": "^1.16.0",
+    "@node-rs/argon2": "^2.0.2",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
@@ -54,9 +57,9 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
+    "react-native-svg": "15.11.2",
     "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5",
-    "react-native-svg": "15.11.2"
+    "react-native-webview": "13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
