--- a/typescript/turbo.json
+++ b/typescript/turbo.json
@@ -10,10 +10,10 @@
     },
     "//#format": {},
     "lint": {
-      "dependsOn": ["^lint"]
+      "dependsOn": ["//#format", "^lint"]
     },
     "check-types": {
-      "dependsOn": ["^check-types"]
+      "dependsOn": ["^build", "^check-types"]
     },
     "dev": {
       "cache": false,
