--- a/typescript/package.json
+++ b/typescript/package.json
@@ -10,6 +10,7 @@
     "check-types": "turbo run check-types"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.29.5",
     "prettier": "^3.5.3",
     "turbo": "^2.5.5",
     "typescript": "^5.8.3"
