--- a/typescript/apps/example-edge-node/env.example
+++ b/typescript/apps/example-edge-node/env.example
@@ -2,4 +2,4 @@ PORT=9200
 EXPO_PUBLIC_MCP_URL="http://localhost:9200"
 EXPO_PUBLIC_APP_URL="http://localhost:9200"
 DATABASE_URL="test.db"
-OPEN_API_KEY="<your-openai-api-key>"
+OPENAI_API_KEY="<your-openai-api-key>"
