Improve scripts and add setup script for env and db

--- a/typescript/apps/example-edge-node/package.json
+++ b/typescript/apps/example-edge-node/package.json
@@ -12,11 +12,11 @@
     "build:server": "tsup src/server/**/*.ts --format esm,cjs",
     "build:web": "expo export -p web --output-dir dist/app",
     "build:migrations": "drizzle-kit generate",
-    "build:scripts": "tsup src/scripts/**/*.ts --out-dir dist/scripts --format cjs",
     "dev:app": "expo start --web --port 8081",
     "dev:server": "tsup src/server/**/*.ts --format esm,cjs --watch --onSuccess='node dist/index.js --dev'",
     "drizzle:studio": "drizzle-kit studio",
-    "script:createUser": "node dist/scripts/createUser.js"
+    "script:setup": "node dist/setup.js",
+    "script:createUser": "node dist/createUser.js"
   },
   "dependencies": {
     "@dkg/plugin-example": "^0.0.1",
