--- a/typescript/apps/example-edge-node/package.json
+++ b/typescript/apps/example-edge-node/package.json
@@ -69,7 +69,8 @@
     "@types/react": "~19.0.10",
     "drizzle-kit": "^0.31.4",
     "eslint": "^9.29.0",
-    "tsup": "^8.5.0"
+    "tsup": "^8.5.0",
+    "turbo": "^2.5.5"
   },
   "private": true
 }
