--- a/typescript/apps/example-edge-node/package.json
+++ b/typescript/apps/example-edge-node/package.json
@@ -19,6 +19,7 @@
     "script:createUser": "node dist/createUser.js"
   },
   "dependencies": {
+    "@dkg/plugin-dkg-essentials": "^0.0.0",
     "@dkg/plugin-example": "^0.0.1",
     "@dkg/plugin-oauth": "^0.0.1",
     "@dkg/plugin-swagger": "^0.0.1",
