--- a/typescript/apps/example-edge-node/package.json
+++ b/typescript/apps/example-edge-node/package.json
@@ -16,7 +16,8 @@
     "dev:server": "tsup src/server/**/*.ts --format esm,cjs --watch --onSuccess='node dist/index.js --dev'",
     "drizzle:studio": "drizzle-kit studio",
     "script:setup": "node dist/setup.js",
-    "script:createUser": "node dist/createUser.js"
+    "script:createUser": "node dist/createUser.js",
+    "script:createToken": "node dist/createToken.js"
   },
   "dependencies": {
     "@dkg/plugin-dkg-essentials": "^0.0.2",
