--- a/typescript/packages/plugins/package.json
+++ b/typescript/packages/plugins/package.json
@@ -28,12 +28,13 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.16.0",
+    "@modelcontextprotocol/sdk": "^1.17.1",
     "compression": "^1.8.0",
     "cors": "^2.8.5",
     "dkg.js": "^8.0.14",
     "express": "^5.1.0",
     "morgan": "^1.10.0",
+    "uuid": "^10.0.0",
     "zod": "^3.25.67"
   },
   "devDependencies": {
