Fix build script for server

--- a/typescript/apps/example-edge-node/package.json
+++ b/typescript/apps/example-edge-node/package.json
@@ -9,11 +9,12 @@
     "web": "expo start --web",
     "lint": "expo lint",
     "check-types": "tsc --noEmit",
-    "build:server": "tsup src/server/**/*.ts --format esm,cjs",
+    "build:server": "tsup src/server/*.ts --format esm,cjs",
+    "build:scripts": "tsup src/server/scripts/*.ts --format esm,cjs --out-dir dist/scripts",
     "build:web": "expo export -p web --output-dir dist/app",
     "build:migrations": "drizzle-kit generate",
     "dev:app": "expo start --web --port 8081",
-    "dev:server": "tsup src/server/**/*.ts --format esm,cjs --watch --onSuccess='node dist/index.js --dev'",
+    "dev:server": "tsup src/server/*.ts --format esm,cjs --watch --onSuccess='node dist/index.js --dev'",
     "drizzle:studio": "drizzle-kit studio",
     "script:setup": "node dist/setup.js",
     "script:createUser": "node dist/createUser.js",
