--- a/typescript/apps/example-edge-node/package.json
+++ b/typescript/apps/example-edge-node/package.json
@@ -42,6 +42,7 @@
     "drizzle-orm": "^0.44.3",
     "expo": "53.0.20",
     "expo-blur": "~14.1.5",
+    "expo-clipboard": "~7.1.5",
     "expo-constants": "~17.1.7",
     "expo-crypto": "~14.1.5",
     "expo-font": "~13.3.1",
@@ -64,8 +65,7 @@
     "react-native-svg": "15.11.2",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "uuid": "^10.0.0",
-    "expo-clipboard": "~7.1.5"
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
