--- a/typescript/packages/plugin-example/package.json
+++ b/typescript/packages/plugin-example/package.json
@@ -18,6 +18,7 @@
     "tsup": "^8.5.0"
   },
   "dependencies": {
+    "@dkg/plugin-dkg-essentials": "^0.0.1",
     "@dkg/plugin-swagger": "^0.0.1",
     "@dkg/plugins": "^0.0.1"
   }
