--- a/typescript/apps/example-edge-node/package.json
+++ b/typescript/apps/example-edge-node/package.json
@@ -16,9 +16,9 @@
     "dev:app": "expo start --web --port 8081",
     "dev:server": "tsup src/server/*.ts --format esm,cjs --watch --onSuccess='node dist/index.js --dev'",
     "drizzle:studio": "drizzle-kit studio",
-    "script:setup": "node dist/setup.js",
-    "script:createUser": "node dist/createUser.js",
-    "script:createToken": "node dist/createToken.js",
+    "script:setup": "node dist/scripts/setup.js",
+    "script:createUser": "node dist/scripts/createUser.js",
+    "script:createToken": "node dist/scripts/createToken.js",
     "postinstall": "node fix-uuid.js"
   },
   "dependencies": {
