--- a/typescript/apps/example-edge-node/package.json
+++ b/typescript/apps/example-edge-node/package.json
@@ -19,6 +19,10 @@
     "script:setup": "node dist/scripts/setup.js",
     "script:createUser": "node dist/scripts/createUser.js",
     "script:createToken": "node dist/scripts/createToken.js",
+    "test:ui": "playwright test",
+    "test:headed": "playwright test --headed",
+    "test:debug": "playwright test --debug",
+    "test:report": "playwright show-report",
     "postinstall": "node fix-uuid.js"
   },
   "dependencies": {
@@ -76,6 +80,7 @@
     "@babel/core": "^7.25.2",
     "@dkg/eslint-config": "*",
     "@dkg/typescript-config": "*",
+    "@playwright/test": "^1.54.2",
     "@types/better-sqlite3": "^7.6.13",
     "@types/react": "~19.0.10",
     "drizzle-kit": "^0.31.4",
