test: adding "low level" tests for /plugin-example (#4)

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -43,4 +43,5 @@ jobs:
       - name: Build packages and apps
         run: npm run build
 
-
+      - name: Run tests from all packages
+        run: npm run test
