--- a/typescript/packages/plugins/package.json
+++ b/typescript/packages/plugins/package.json
@@ -25,7 +25,8 @@
   "scripts": {
     "dev": "tsup src/*.ts --format cjs,esm --dts --watch",
     "build": "tsup src/*.ts --format cjs,esm --dts",
-    "check-types": "tsc --noEmit"
+    "check-types": "tsc --noEmit",
+    "test": "echo 'No tests yet in /plugins - placeholder' && exit 0"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.17.1",
