--- a/typescript/package.json
+++ b/typescript/package.json
@@ -7,12 +7,21 @@
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "check-types": "turbo run check-types"
+    "check-types": "turbo run check-types",
+    "test": "turbo run test",
+    "test:mocha": "mocha"
   },
   "devDependencies": {
     "@changesets/cli": "^2.29.5",
+    "@types/chai": "^5.2.2",
+    "@types/mocha": "^10.0.10",
+    "@types/supertest": "^6.0.3",
+    "chai": "^5.2.1",
+    "mocha": "^11.7.1",
     "prettier": "^3.5.3",
+    "supertest": "^7.1.4",
     "turbo": "^2.5.5",
+    "tsx": "^4.20.4",
     "typescript": "^5.8.3"
   },
   "engines": {
