--- a/typescript/packages/plugin-auth/package.json
+++ b/typescript/packages/plugin-auth/package.json
@@ -9,7 +9,8 @@
     "dev": "tsup src/*.ts --format cjs,esm --dts --watch",
     "build": "tsup src/*.ts --format cjs,esm --dts",
     "check-types": "tsc --noEmit",
-    "lint": "eslint . --max-warnings 0"
+    "lint": "eslint . --max-warnings 0",
+    "test": "echo 'No tests yet in /plugin-auth - placeholder' && exit 0"
   },
   "dependencies": {
     "@dkg/plugins": "^0.0.1",
