--- a/typescript/packages/plugin-example/package.json
+++ b/typescript/packages/plugin-example/package.json
@@ -9,7 +9,8 @@
     "dev": "tsup src/*.ts --format cjs,esm --dts --watch",
     "build": "tsup src/*.ts --format cjs,esm --dts",
     "check-types": "tsc --noEmit",
-    "lint": "eslint . --max-warnings 0"
+    "lint": "eslint . --max-warnings 0",
+    "test": "mocha 'tests/**/*.spec.ts'"
   },
   "devDependencies": {
     "@dkg/eslint-config": "*",
