--- a/typescript/packages/plugin-dkg-essentials/package.json
+++ b/typescript/packages/plugin-dkg-essentials/package.json
@@ -19,7 +19,7 @@
     "build": "tsup src/*.ts --format cjs,esm --dts",
     "check-types": "tsc --noEmit",
     "lint": "eslint . --max-warnings 0",
-    "test": "echo 'No tests yet in /plugin-dkg-essentials - placeholder' && exit 0"
+    "test": "mocha 'tests/**/*.spec.ts'"
   },
   "dependencies": {
     "@dkg/plugins": "^0.0.1"
