add more api tests

--- a/typescript/package.json
+++ b/typescript/package.json
@@ -18,10 +18,12 @@
     "@changesets/cli": "^2.29.5",
     "@types/chai": "^5.2.2",
     "@types/mocha": "^10.0.10",
+    "@types/sinon": "^17.0.3",
     "@types/supertest": "^6.0.3",
     "chai": "^5.2.1",
     "mocha": "^11.7.1",
     "prettier": "^3.5.3",
+    "sinon": "^19.0.2",
     "supertest": "^7.1.4",
     "turbo": "^2.5.5",
     "tsx": "^4.20.4",
