--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -44,4 +44,4 @@ jobs:
         run: npm run build
 
       - name: Run tests from all packages
-        run: npm run test
+        run: npm run test:api
