--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -27,9 +27,9 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version-file: "typescript/.nvmrc"
+          node-version-file: "./.nvmrc"
           cache: "npm"
-          cache-dependency-path: "typescript/package-lock.json"
+          cache-dependency-path: "./package-lock.json"
 
       - name: Install Turbo globally
         run: npm install -g turbo
