--- a/apps/agent/package.json
+++ b/apps/agent/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "dkg-node",
+  "name": "@dkg/agent",
   "main": "expo-router/entry",
-  "version": "0.0.1",
+  "version": "0.0.0",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
