Make 'lint' depend on 'check-types'

--- a/turbo.json
+++ b/turbo.json
@@ -10,7 +10,7 @@
     },
     "//#format": {},
     "lint": {
-      "dependsOn": ["//#format", "^lint"]
+      "dependsOn": ["//#format", "^check-types", "^lint"]
     },
     "check-types": {
       "dependsOn": ["^build", "^check-types"]
