--- a/typescript/package.json
+++ b/typescript/package.json
@@ -9,19 +9,24 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "check-types": "turbo run check-types",
     "test": "turbo run test",
-    "test:mocha": "mocha"
+    "test:mocha": "mocha",
+    "generate:DKG_Node:ui:report": "node report-UI-Tests-config.js",
+    "test:ui": "cd apps/example-edge-node && PLAYWRIGHT_JUNIT_OUTPUT_NAME=DKG_Node_UI_Tests.xml PLAYWRIGHT_HTML_REPORT=DKG_Node_UI_Tests npx playwright test tests/spec/testUI.spec.js"
   },
   "devDependencies": {
     "@changesets/cli": "^2.29.5",
     "@types/chai": "^5.2.2",
     "@types/mocha": "^10.0.10",
+    "@types/sinon": "^17.0.4",
     "@types/supertest": "^6.0.3",
     "chai": "^5.2.1",
     "mocha": "^11.7.1",
+    "mochawesome": "^7.1.3",
     "prettier": "^3.5.3",
+    "sinon": "^21.0.0",
     "supertest": "^7.1.4",
-    "turbo": "^2.5.5",
     "tsx": "^4.20.4",
+    "turbo": "^2.5.5",
     "typescript": "^5.8.3"
   },
   "engines": {
@@ -31,5 +36,9 @@
   "workspaces": [
     "apps/*",
     "packages/*"
-  ]
+  ],
+  "dependencies": {
+    "dotenv": "^17.2.1",
+    "test-results-reporter": "^1.1.6"
+  }
 }
