--- a/apps/agent/package.json
+++ b/apps/agent/package.json
@@ -14,7 +14,7 @@
     "build:web": "expo export -p web --output-dir dist/app",
     "build:migrations": "drizzle-kit generate",
     "dev:app": "expo start --web --port 8081",
-    "dev:server": "tsup src/server/*.ts --format esm,cjs --watch --onSuccess='node dist/index.js --dev'",
+    "dev:server": "tsup src/server/*.ts --format esm,cjs --watch --onSuccess=\"node dist/index.js --dev\"",
     "drizzle:studio": "drizzle-kit studio",
     "script:setup": "node dist/scripts/setup.js",
     "script:createUser": "node dist/scripts/createUser.js",
