--- a/typescript/package.json
+++ b/typescript/package.json
@@ -24,6 +24,7 @@
     "@types/supertest": "^6.0.3",
     "chai": "^5.2.1",
     "mocha": "^11.7.1",
+    "mochawesome": "^7.1.3",
     "prettier": "^3.5.3",
     "sinon": "^19.0.2",
     "supertest": "^7.1.4",
