--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "check-types": "turbo run check-types",
     "test": "turbo run test",
     "test:mocha": "mocha",
-    "generate:DKG_Node:ui:report": "node report-UI-Tests-config.js",
-    "test:ui": "cd apps/agent && PLAYWRIGHT_JUNIT_OUTPUT_NAME=DKG_Node_UI_Tests.xml PLAYWRIGHT_HTML_REPORT=DKG_Node_UI_Tests npx playwright test tests/spec/testUI.spec.js"
+    "generate:dkg_node:ui:report": "node report-UI-Tests-config.js",
+    "test:ui": "turbo run test --filter=@dkg/agent"
   },
   "devDependencies": {
     "@changesets/cli": "^2.29.5",
@@ -21,11 +21,13 @@
     "@types/sinon": "^17.0.4",
     "@types/supertest": "^6.0.3",
     "chai": "^5.2.1",
+    "dotenv": "^17.2.1",
     "mocha": "^11.7.1",
     "mochawesome": "^7.1.3",
     "prettier": "^3.5.3",
     "sinon": "^21.0.0",
     "supertest": "^7.1.4",
+    "test-results-reporter": "^1.1.6",
     "tsx": "^4.20.4",
     "turbo": "^2.5.5",
     "typescript": "^5.8.3"
@@ -37,9 +39,5 @@
   "workspaces": [
     "apps/*",
     "packages/*"
-  ],
-  "dependencies": {
-    "dotenv": "^17.2.1",
-    "test-results-reporter": "^1.1.6"
-  }
+  ]
 }
