--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -38,4 +38,4 @@ jobs:
         run: npm run build
 
       - name: Run tests from all packages
-        run: npm run test:api
+        run: npm run test
