--- a/package.json
+++ b/package.json
@@ -11,25 +11,24 @@
     "check-types": "turbo run check-types",
     "test": "turbo run test",
     "test:mocha": "mocha",
-    "test:example": "turbo run test --filter=@dkg/plugin-example",
-    "test:dkg-essentials": "turbo run test --filter=@dkg/plugin-dkg-essentials",
-    "test:auth": "turbo run test --filter=@dkg/plugin-auth",
-    "test:api": "npm run test:example && npm run test:dkg-essentials && npm run test:auth",
-    "generate:DKG_Node:api:report": "node report-API-Tests-config.js"
+    "test:api": "turbo run test --filter='@dkg/plugin-*'",
+    "test-report:api": "node report-API-Tests-config.js"
     
   },
   "devDependencies": {
     "@changesets/cli": "^2.29.5",
     "@types/chai": "^5.2.2",
     "@types/mocha": "^10.0.10",
-    "@types/sinon": "^17.0.3",
+    "@types/sinon": "^17.0.4",
     "@types/supertest": "^6.0.3",
     "chai": "^5.2.1",
+    "dotenv": "^17.2.1",
     "mocha": "^11.7.1",
     "mochawesome": "^7.1.3",
     "prettier": "^3.5.3",
-    "sinon": "^19.0.2",
+    "sinon": "^21.0.0",
     "supertest": "^7.1.4",
+    "test-results-reporter": "^1.1.6",
     "tsx": "^4.20.4",
     "turbo": "^2.5.5",
     "typescript": "^5.8.3"
@@ -41,9 +40,5 @@
   "workspaces": [
     "apps/*",
     "packages/*"
-  ],
-  "dependencies": {
-    "dotenv": "^17.2.1",
-    "test-results-reporter": "^1.1.6"
-  }
+  ]
 }
