--- a/packages/plugin-oauth/package.json
+++ b/packages/plugin-oauth/package.json
@@ -9,8 +9,7 @@
     "dev": "tsup src/*.ts --format cjs,esm --dts --watch",
     "build": "tsup src/*.ts --format cjs,esm --dts",
     "check-types": "tsc --noEmit",
-    "lint": "eslint . --max-warnings 0",
-    "test": "echo 'No tests yet in /plugin-dkg-oauth - placeholder' && exit 0"
+    "lint": "eslint . --max-warnings 0"
   },
   "dependencies": {
     "@dkg/plugin-swagger": "^0.0.2",
