--- a/apps/agent/package.json
+++ b/apps/agent/package.json
@@ -19,7 +19,8 @@
     "script:setup": "node dist/scripts/setup.js",
     "script:createUser": "node dist/scripts/createUser.js",
     "script:createToken": "node dist/scripts/createToken.js",
-    "test": "PLAYWRIGHT_JUNIT_OUTPUT_NAME=DKG_Node_UI_Tests.xml PLAYWRIGHT_HTML_REPORT=DKG_Node_UI_Tests playwright test tests/spec/testUI.spec.js",
+    "test": "PLAYWRIGHT_JUNIT_OUTPUT_NAME=DKG_Node_UI_Tests.xml playwright test tests/spec/testUI.spec.js --timeout=30000 --reporter=list,junit || true",
+    "test:ui": "PLAYWRIGHT_JUNIT_OUTPUT_NAME=DKG_Node_UI_Tests.xml PLAYWRIGHT_HTML_REPORT=DKG_Node_UI_Tests playwright test tests/spec/testUI.spec.js",
     "test:headed": "playwright test --headed",
     "test:debug": "playwright test --debug",
     "test:report": "playwright show-report",
