--- a/packages/plugin-oauth/package.json
+++ b/packages/plugin-oauth/package.json
@@ -9,7 +9,8 @@
     "dev": "tsup src/*.ts --format cjs,esm --dts --watch",
     "build": "tsup src/*.ts --format cjs,esm --dts",
     "check-types": "tsc --noEmit",
-    "lint": "eslint . --max-warnings 0"
+    "lint": "eslint . --max-warnings 0",
+    "test": "mocha 'tests/**/*.spec.ts'"
   },
   "dependencies": {
     "@dkg/plugin-swagger": "^0.0.2",
@@ -20,7 +21,17 @@
   "devDependencies": {
     "@dkg/eslint-config": "*",
     "@dkg/typescript-config": "*",
+    "@types/chai": "^4.3.3",
+    "@types/mocha": "^10.0.1",
+    "@types/sinon": "^17.0.3",
+    "@types/supertest": "^6.0.2",
+    "@types/uuid": "^10.0.0",
+    "chai": "^4.3.6",
     "eslint": "^9.29.0",
+    "express": "^4.18.2",
+    "mocha": "^10.2.0",
+    "sinon": "^19.0.2",
+    "supertest": "^7.0.0",
     "tsup": "^8.5.0"
   }
 }
