--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "check-types": "turbo run check-types",
-    "test": "turbo run test --force",
     "test:mocha": "mocha",
+    "test": "turbo run test --force",
+    "test:ui": "turbo run test --filter=@dkg/agent --force",
+    "test:api": "turbo run test --filter='@dkg/plugin-*' --force",
     "test-report:ui": "node report-UI-Tests-config.js",
-    "test-report:api": "node report-API-Tests-config.js",
-    "test:ui": "turbo run test --filter=@dkg/agent --force"
+    "test-report:api": "node report-API-Tests-config.js"
   },
   "devDependencies": {
     "@changesets/cli": "^2.29.5",
