--- a/packages/plugin-swagger/package.json
+++ b/packages/plugin-swagger/package.json
@@ -30,8 +30,6 @@
     "sinon": "^19.0.2",
     "@types/sinon": "^17.0.3",
     "supertest": "^7.0.0",
-    "@types/supertest": "^6.0.2",
-    "express": "^4.18.2",
-    "@types/express": "^4.17.21"
+    "@types/supertest": "^6.0.2"
   }
 }
