--- a/.github/workflows/validate-plugin-tests.yml
+++ b/.github/workflows/validate-plugin-tests.yml
@@ -44,7 +44,7 @@ jobs:
           for plugin in $plugins; do
             name=$(basename "$plugin")
             echo ""
-            echo "🔍 Checking $name..."
+            echo "Checking $name..."
             
             cd "$plugin"
             
