--- a/apps/agent/package.json
+++ b/apps/agent/package.json
@@ -78,7 +78,8 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "three-spritetext": "^1.10.0",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "expo-file-system": "~18.1.11"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
